--- a/watson.html
+++ b/watson.html
@@ -1427,10 +1427,7 @@ function getNextClicks(countNext)
  					  					 			   		  	 		  			   																																									  <p itemprop="articleBody">The financial terms of the joint IBM and Mubadala venture were not disclosed.</p>
 
 <p>
-
-<iframe src="https://m-staging.timeline.com/watson.html" width=“100%” height="360px" style="
-border: none;
-"></iframe>
+<iframe src="https://m-staging.timeline.com/watson.html" width="100%" height="480px"></iframe>
  	</p>																							  <p itemprop="articleBody"><b>About Mubadala Development Company</b></p>
 
  					  					 			   		  	 		  			   																																									  <p itemprop="articleBody">Established and owned by the Government of <span class="xn-location"  itemprop="contentLocation" itemscope itemtype="http://schema.org/Place"><span itemprop="geo" itemscope itemtype="http://schema.org/address"><span itemprop="addressLocality">Abu Dhabi</span></span></span>, the company's strategy is built on the creation of partnerships and on long-term, capital-intensive investments that deliver strong financial returns, contribute to the growth and diversification of <span class="xn-location"  itemprop="contentLocation" itemscope itemtype="http://schema.org/Place"><span itemprop="geo" itemscope itemtype="http://schema.org/address"><span itemprop="addressLocality">Abu Dhabi's</span></span></span> economy, and create opportunities for current and future generations in the <span class="xn-location"  itemprop="contentLocation" itemscope itemtype="http://schema.org/Place"><span itemprop="geo" itemscope itemtype="http://schema.org/address"><span itemprop="addressLocality">United Arab Emirates</span></span></span>.</p>
