--- a/watson_forbes.html
+++ b/watson_forbes.html
@@ -12,7 +12,7 @@
 Cognitive computing offers fundamental differences in how systems are built and interact with humans. Cognitive-based systems, such as IBM Watson, are able to build knowledge and learn, understand natural language, and reason and interact more naturally with human beings than traditional systems." />
 		<meta name="keywords" content="Leadership" />
 		<meta name="author" content="IBM Smarter Planet Contributor" />
-		<meta name="apple-itunes-app" content="app-id=588647136" />
+		<meta name="apple-itunes-app" content="app-id=588647136" />ti
 		<meta name="googlebot-news" content="noindex,nofollow" />
 		<meta property="author" content="IBM Smarter Planet Contributor" />
 		<meta property="og:title" content="IBM Smarter PlanetVoice: What&#39;s The Future Of Cognitive Computing? IBM Watson" />
@@ -671,7 +671,7 @@ Disclaimer: IBM, the IBM logo, ibm.com and Smarter Planet are trademarks or regi
 </p>
 
 <p>
-	<iframe src="https://timeline.com/hiddengem.html" width="100%" height=“3600px"></iframe>
+	<iframe src="https://timeline.com/hiddengem.html" width="100%" height=“360px"></iframe>
 
 </p>
 
