--- a/watson_forbes.html
+++ b/watson_forbes.html
@@ -667,13 +667,15 @@ Disclaimer: IBM, the IBM logo, ibm.com and Smarter Planet are trademarks or regi
 
 
 	<iframe src="https://m-staging.timeline.com/watson.html" width="100%" height="360px"></iframe>
-
+	
 </p>
 
-<p>
-	<iframe src="https://timeline.com/hiddengem.html" width="100%" height=“360px"></iframe>
+<p> 
 
+	<iframe src="https://timeline.com/hiddengem.html" width="100%" height="360px"></iframe> 
+	
 </p>
+
 
 <p>They are also able to put content into context with confidence-weighted responses and supporting evidence. Cognitive systems can quickly identify new patterns and insights. Over time, they will simulate even more closely how the brain actually works. In doing so, they could help us solve the world’s most complex problems by penetrating the complexity of <a href="http://www.ibm.com/big-data/us/en/technology/" target="_blank" rel="nofollow">big data</a> and exploiting the power of natural language processing and machine learning.</p> 
 <p>IBM is working to expand the adoption of systems, such as Watson, to enable global innovation and collaboration. This month, we announced a <a href="http://www-03.ibm.com/press/us/en/pressrelease/46045.wss" target="_blank" rel="nofollow">new alliance with SoftBank to bring Watson to Japan</a>. The collaboration will include further expansion of Watson’s ability to communicate and “think” in Japanese, as well as establishment of a local ecosystem of partners, developers, entrepreneurs, students and other enthusiasts to create new apps and services powered by Watson. This is a critical step that will allow us to bring cognitive computing to every corner of the globe, starting with one of the world’s largest economies and technology markets.</p> 
